--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ url: estimates.streamdata.gallery
 tag: Estimates
 markdown: kramdown
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md", ".DS_Store"]
-github_user: streamdata-gallery
+github_user: streamdata-gallery-topics
 github_repo: estimates
 github_branch: master
 collections:
